--- a/Stacks/office-lab/homepage-config/settings.yaml
+++ b/Stacks/office-lab/homepage-config/settings.yaml
@@ -34,6 +34,10 @@ layout:
   Foundation:
     style: row
     columns: 4
+  Backup:
+    style: row
+    columns: 2
+
 
 providers:
   openweathermap: openweathermapapikey
