--- a/Substacks/Foundation-Local/compose.yml
+++ b/Substacks/Foundation-Local/compose.yml
@@ -6,6 +6,7 @@
 
 include:
   - path: "../../Apps/Traefik/compose.yml" ## Traefik: reverse proxy
+  - path: "../../Apps/Nautical/compose.yml" ## Traefik: reverse proxy
   - path: "../../Apps/Portainer/compose.yml" ## App with custom envs
     env_file:
        - ../../Apps/Portainer/default.env
