--- a/Apps/Activepieces/compose.yml
+++ b/Apps/Activepieces/compose.yml
@@ -40,6 +40,8 @@ services:
       - activepieces_postgres_data:/var/lib/postgresql/data
     networks:
       - ap-net
+    labels:
+      - "nautical-backup.override-source-dir=${STACK_NAME}_activepieces_postgres_data"
 
   activepieces-redis:
     image: 'redis:7.0.7'
@@ -49,6 +51,8 @@ services:
       - 'activepieces_redis_data:/data'
     networks:
       - ap-net
+    labels:
+      - "nautical-backup.override-source-dir=${STACK_NAME}_activepieces_redis_data"
 
 volumes:
   activepieces_postgres_data:
