--- a/Apps/AnythingLLM/compose.yml
+++ b/Apps/AnythingLLM/compose.yml
@@ -23,6 +23,7 @@ services:
       - "homepage.icon=openai.png" # Pick from https://github.com/homarr-labs/dashboard-icons
       - "homepage.href=http://${APP_DOMAIN}.${HOME_SERVER_DOMAIN}/" # Link to access this service on the homepage
       - "homepage.description=AIO LLM tool" # Description of this service on the homepage
+      - "nautical-backup.override-source-dir=${STACK_NAME}_anythingllm"
 
 volumes:
   anythingllm:
