--- a/Apps/Fusion/compose.yml
+++ b/Apps/Fusion/compose.yml
@@ -21,6 +21,7 @@ services:
       - "homepage.icon=mdi-newspaper" # Pick from https://github.com/homarr-labs/dashboard-icons
       - "homepage.href=http://${APP_DOMAIN}.${HOME_SERVER_DOMAIN}/" # Link to access this service on the homepage
       - "homepage.description=RSS reader" # Description of this service on the homepage
+      - "nautical-backup.override-source-dir=${STACK_NAME}_fusion-data"
 
 volumes:
   fusion-data:
