--- a/Apps/Mealie/compose.yml
+++ b/Apps/Mealie/compose.yml
@@ -41,6 +41,7 @@ services:
       - "homepage.icon=mealie.png" # Pick from https://github.com/homarr-labs/dashboard-icons
       - "homepage.href=http://${APP_DOMAIN}.${HOME_SERVER_DOMAIN}/" # Link to access this service on the homepage
       - "homepage.description=Recipe database" # Description of this service on the homepage
+      - "nautical-backup.override-source-dir=${STACK_NAME}_mealie-data"
 
 volumes:
   mealie-data:
