--- a/Apps/Metabase/compose.yml
+++ b/Apps/Metabase/compose.yml
@@ -36,6 +36,8 @@ services:
       - "homepage.icon=metabase.png" # Pick from https://github.com/homarr-labs/dashboard-icons
       - "homepage.href=http://${APP_DOMAIN}.${HOME_SERVER_DOMAIN}/" # Link to access this service on the homepage
       - "homepage.description=Self-served BI" # Description of this service on the homepage
+      - "nautical-backup.group=metabase"
+      - "nautical-backup.source-dir-required=false"
 
   postgres:
     image: postgres:latest
@@ -48,6 +50,9 @@ services:
       POSTGRES_PASSWORD: mysecretpassword
     networks:
       - metabase-net
+    labels:
+      - "nautical-backup.group=metabase"
+      - "nautical-backup.override-source-dir=${STACK_NAME}_metabase-pg-data"
 
   
 volumes:
