--- a/Apps/OpenWebUI/compose.yml
+++ b/Apps/OpenWebUI/compose.yml
@@ -34,6 +34,7 @@ services:
       - "homepage.icon=openai.png" # Pick from https://github.com/homarr-labs/dashboard-icons
       - "homepage.href=http://${APP_DOMAIN}.${HOME_SERVER_DOMAIN}/" # Link to access this service on the homepage
       - "homepage.description=Chatbot UI for LLMs" # Description of this service on the homepage
+      - "nautical-backup.override-source-dir=${STACK_NAME}_open-webui"
 
 volumes:
   open-webui:
