--- a/Apps/SillyTavern/compose.yml
+++ b/Apps/SillyTavern/compose.yml
@@ -22,6 +22,8 @@ services:
       - "homepage.icon=openai.png" # Pick from https://github.com/homarr-labs/dashboard-icons
       - "homepage.href=http://${APP_DOMAIN}.${HOME_SERVER_DOMAIN}/" # Link to access this service on the homepage
       - "homepage.description=LLM interface for power users" # Description of this service on the homepage
+      - "nautical-backup.override-source-dir=${STACK_NAME}_silly-tavern-data"
+      - "nautical-backup.additional-folders=${STACK_NAME}_silly-tavern-plugins"
 
 volumes:
   silly-tavern-data:
