--- a/Substacks/Foundation-DNS-TS/compose.yml
+++ b/Substacks/Foundation-DNS-TS/compose.yml
@@ -1,21 +1,7 @@
-# Foundation-DNS-TS stack includes core networking plus Tailscale VPN for DNS & LAN routing
+# Foundation-DNS-TS expands the Foundation-DNS to provide Tailscale support
+#
 include:
-  - path: "../../Apps/Traefik/compose.yml" ## Traefik: reverse proxy
-  - path: "../../Apps/PiHole/compose.yml" ## App with custom envs
-    env_file:
-       - ../../Apps/PiHole/default.env
-  - path: "../../Apps/Portainer/compose.yml" ## App with custom envs
-    env_file:
-       - ../../Apps/Portainer/default.env
-  - path: "../../Apps/Authentik/compose.yml" ## App with custom envs
-    env_file:
-       - ../../Apps/Authentik/default.env
-  - path: "../../Apps/Homepage/compose.yml" ## App with custom envs
-    env_file:
-       - ../../Apps/Homepage/default.env
+  - path: "../Foundation-DNS/compose.yml" ## Foundation DNS stack with PiHole support
   - path: "../../Apps/Tailscale/compose.yml" ## Tailscale VPN and DNS
     env_file:
        - ../../Apps/Tailscale/default.env
-
-networks:
-  traefik-net: # Traefik network connecting internal apps to the reverse proxy
