--- a/Apps/LifeEngineer/default.env
+++ b/Apps/LifeEngineer/default.env
@@ -1,5 +1,8 @@
 APP_NAME=life_engineer
 APP_DOMAIN=engineer
 APP_PORT=3000
+OPENAI_API_KEY=${OPENAI_API_KEY}
 LIFE_ENGINEER_ASSISTANT_PERSONA=max
 LIFE_ENGINEER_USER_PERSONA=gen
+LIFE_ENGINEER_PERSONA_DIR=./life-engineer-persona
+LIFE_ENGINEER_BOOTSTRAP_DIR=./life-engineer-bootstrap
