--- a/Apps/LifeEngineer/default.env
+++ b/Apps/LifeEngineer/default.env
@@ -2,7 +2,11 @@ APP_NAME=life_engineer
 APP_DOMAIN=engineer
 APP_PORT=3000
 OPENAI_API_KEY=${OPENAI_API_KEY}
+GEMINI_API_KEY=${GEMINI_API_KEY}
+LIFE_ENGINEER_INITIAL_ADMIN_EMAIL=admin@example.com
+LIFE_ENGINEER_INITIAL_ADMIN_PASSWORD=admin1234
 LIFE_ENGINEER_ASSISTANT_PERSONA=max
 LIFE_ENGINEER_USER_PERSONA=gen
 LIFE_ENGINEER_PERSONA_DIR=./life-engineer-persona
 LIFE_ENGINEER_BOOTSTRAP_DIR=./life-engineer-bootstrap
+LIFE_ENGINEER_SECRET=
